--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ env:
   UNITY_LICENSE: ${{secrets.UNITY_LICENSE}}
 
 jobs:
-  space-shooter:
+  name : space-shooter-build
   runs-on: ubuntu-latest
 
   steps:
