--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
       - name: Tests
         uses: webbertakken/unity-test-runner@v1.3
         with:
+          path: SpaceShooter/
           unityVersion: 2019.4.14f1
