--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
 
       # Test
       - name: Tests
-        uses: webbertakken/unity-test-runner@v1.3
+        uses: webbertakken/unity-test-runner@v1.7
         with:
-          path: SpaceShooter
+          path: SpaceShooter/Assets
           unityVersion: 2019.4.14f1
 
       #Ouptput
