--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: Build-Test
-          path: build-Test
+          path: artifacts
