--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -1,5 +1,6 @@
 name: Acquire activation file
-on: push
+on:
+  workflow_dispatch: {}
 jobs:
   activation:
     name: Request manual activation file 🔑
@@ -8,12 +9,12 @@ jobs:
       # Request manual activation file
       - name: Request manual activation file
         id: getManualLicenseFile
-        uses: webbertakken/unity-request-manual-activation-file@v1.1
+        uses: webbertakken/unity-request-manual-activation-file@v2
         with:
-          unityVersion: 2019.4.14f1
+          unityVersion: 2020.3.3f1
       # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - name: Expose as artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.getManualLicenseFile.outputs.filePath }}
           path: ${{ steps.getManualLicenseFile.outputs.filePath }}
