--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 */[Bb]uilds/
 */[Ll]ogs/
 */[Mm]emoryCaptures/
-
+*/[uU]serSettings/
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
@@ -60,3 +60,6 @@ crashlytics-build.properties
 
 
 *.idea/
+*.vscode/
+*.vsconfig
+
